# Vulkan_clusterLOD

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  意见.md
_downloaded_resources/bunny_v2/: bunny.gltf  bunny.gltf.zippp
docs/: code-organization.md  src-shaders-reference.md
shaders/: build_setup.comp.glsl  clusters.mesh.glsl  frag.glsl  shaderio.h  shaderio_building.h  shaderio_scene.h  shaderio_streaming.h  traversal_init.comp.glsl  traversal_run.comp.glsl  traversal_run_separate_groups.comp.glsl
shaders/common/: attribute_encoding.h  cluster_shading_common.glsl  culling.glsl  culling_constants.inc  culling_frustum.inc  culling_hiz.inc  culling_raster.inc
shaders/debug/: render_cluster_bbox.frag.glsl  render_cluster_bbox.mesh.glsl  render_instance_bbox.frag.glsl  render_instance_bbox.mesh.glsl
shaders/interface/: shaderio.h  shaderio_building.h  shaderio_core.h  shaderio_scene.h  shaderio_streaming.h
shaders/post/: atomic_raster_resolve.frag.glsl  fullscreen.vert.glsl  hierarchical_z.comp.glsl  sky_background.frag.glsl
shaders/render/: cluster_mesh.mesh.glsl  cluster_shading.frag.glsl  software_cluster_raster.comp.glsl
shaders/streaming/: streaming.glsl  streaming_age_filter_groups.comp.glsl  streaming_request_setup.comp.glsl  streaming_scene_update.comp.glsl
shaders/traversal/: assembly_visibility.comp.glsl  traversal.glsl  traversal_init.comp.glsl  traversal_presort.comp.glsl  traversal_run.comp.glsl  traversal_run_separate_groups.comp.glsl
src/: lodclusters.cpp  lodclusters.hpp  lodclusters_ui.cpp  main.cpp  meshlod_simplify.h  preloaded.cpp  renderer.cpp  renderer.hpp  renderer_clusters_lod.cpp  resources.cpp  resources.hpp  scene.cpp  scene.hpp  scene_gltf.cpp  streaming.cpp  streaming.hpp  streamutils.cpp  streamutils.hpp
src/app/: lod_clusters_app.cpp  lod_clusters_app.hpp  lod_clusters_ui.cpp  lodclusters.cpp  lodclusters.hpp  lodclusters_config.cpp  lodclusters_lifecycle.cpp  lodclusters_runtime.cpp  lodclusters_scene.cpp  lodclusters_ui.cpp  main.cpp
src/core/: cache.cpp  scene_cache.cpp  serialization.hpp
src/gpu/: resources.cpp  resources.hpp
src/lod/: cluster_lod_builder.cpp  mesh_lod.cpp  mesh_lod.h  mesh_lod_bounds.h  mesh_lod_build.h  mesh_lod_clustering.h  mesh_lod_config.h  mesh_lod_impl.h  mesh_lod_local_indices.h  mesh_lod_simplify.h
src/meshlod/: lod.h  meshlod.cpp  meshlod.h  meshlod_bounds.h  meshlod_build.h  meshlod_clustering.h  meshlod_config.h  meshlod_impl.h  meshlod_local_indices.h  meshlod_simplify.h  meshlod_types.h
src/render/: cluster_lod_renderer.cpp  preloaded_scene.cpp  preloaded_scene.hpp  renderer.cpp  renderer.hpp
src/renderer/: cluster_lod_renderer.cpp  hierarchical_z.cpp  hierarchical_z.hpp  preloaded_scene_gpu.cpp  preloaded_scene_gpu.hpp  renderer.cpp  renderer.hpp  renderer_clusters_lod.cpp  renderer_resources.cpp  renderer_resources.hpp
src/scene/: cluster_compression.cpp  clusterlod.cpp  gltf_loader.cpp  scene.cpp  scene.hpp  scene_cluster_compression.cpp  scene_cluster_lod_builder.cpp  scene_gltf.cpp
src/streaming/: scene_streaming.cpp  scene_streaming.hpp  streaming_tasks.cpp  streaming_tasks.hpp
